# deeppoly-cpp

./: .gitignore  CMakeLists.txt  README.md  adversarial_game.py  deeppoly_mnist.ipynb  mnist_rotation_attacks.ipynb  research_areas.md  research_idea.md  rl_attack_transfer_proposal.md  speech_adversarial_attack.ipynb
data/: download.sh
include/: deeppoly.hpp  fgsm.hpp  mnist_loader.hpp  results.hpp
src/: attack.cpp  show.cpp  train.cpp  verify.cpp
